Bug 148522 - Undo line color changes aligns text centered (and doesn't undo the line color)
Summary: Undo line color changes aligns text centered (and doesn't undo the line color)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.2.0.4 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.5.0 target:7.4.0.0.beta2 tar...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: ImpressDraw-Tables Undo-Redo
  Show dependency treegraph
 
Reported: 2022-04-11 18:35 UTC by Telesto
Modified: 2022-06-27 14:48 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-04-11 18:35:02 UTC
Description:
Undo line color changes aligns text centered (and doesn't undo the line color)

Steps to Reproduce:
1. Open Impress (empty document
2. insert a table 2x2
3. Type in each cell a letter, say A for A1, B in A2 etc
4. Enter cell B and right click -> table properties
5. Borders tab
6. Change the line color from white to say red
7. Press Ok
8. CTRL+Z

Actual Results:
Text becomes centered and border still red

Expected Results:
Undo undo's 


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: efe854bf9b6daff3d0ecf6e3d04bd9a50bfaa3f3
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL Jumbo
Comment 1 Telesto 2022-04-11 18:36:06 UTC
Still OK with
Version: 6.4.0.0.beta1+ (x64)
Build ID: 20be5cd0bdc57d812bf34a2debfe48caa51de881
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 2 Aron Budea 2022-06-19 03:27:10 UTC
Reproducted using LO 7.4.0.0.beta1+ (cdf48e57da6b8a6a5eb4131340fa2c14be135714) / Ubuntu.

It's also a regression, and started going bad with the following commit, bibisected using repo bibisect-linux-64-7.2. Adding CC: to Miklos Vajna.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=fdeb04f7c59cf8032fe17072ed779e70505cc6ab
author		Miklos Vajna <vmiklos@collabora.com>	2020-12-15 17:17:56 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	2020-12-15 22:41:14 +0100

tdf#129961 svx: finish UI for table shadow as direct format
Comment 3 Commit Notification 2022-06-24 16:45:24 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3edfbc19950610bb2061d29cb58b3811b1a0b1a5

tdf#148522 svx: fix undo of cell border changes text alignment in other cells

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-06-27 12:30:14 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/ee68863baa51e47ae9bb00373fce2f86ba8df1e8

tdf#148522 svx: fix undo of cell border changes text alignment in other cells

It will be available in 7.4.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-06-27 14:48:34 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/965a4583af233114985c14d49b9c476135bcfa45

tdf#148522 svx: fix undo of cell border changes text alignment in other cells

It will be available in 7.3.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.