tdf#148522 svx: fix undo of cell border changes text alignment in other cells

The Impress table properties dialog has multiple purposes: normally it
only affects the properties of the currently active cell, but shadow is
applied on the whole shape.

Regression from commit fdeb04f7c59cf8032fe17072ed779e70505cc6ab
(tdf#129961 svx: finish UI for table shadow as direct format,
2020-12-15), we started to apply properties to the current cell, and
then to the whole shape as well, unconditionally. This affects
undo/redo, as there is a separate undo manager while the text edit of a
table cell is active and when the text edit is ended.

Fix the problem by only applying properties on the shape when there we
actually have some properties: this way the text edit is typically not
ended, bringing back the old undo/redo behavior.

Note that we still need to end the text edit if the user explicitly sets
some shadow properties, that part is unchanged with this commit.

Change-Id: I78e28bd326a2c12c3775b33957adca4cd95ac582
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136357
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 3edfbc19950610bb2061d29cb58b3811b1a0b1a5)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136460
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 750568d77812202c9c01fa87945b507a358c6db5)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136468